fix z-index of cards

--- a/_sass/description.scss
+++ b/_sass/description.scss
@@ -43,7 +43,7 @@
 			width: 100%;
 			height: 100%;
 			transition: 0.5s;
-			z-index: 100000;
+			z-index: 1;
 			border-radius: 20px;
 			overflow: hidden;
 			transform-origin: top;
